--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "jodit": "^4.2.47",
     "jodit-react": "^4.1.2",
