--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "jodit": "^4.2.47",
     "jodit-react": "^4.1.2",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
+    "react-draggable": "^4.4.6",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^7.0.2",
